# Lincoln

./: .version-bump.json  CLAUDE.md  README.en.md  README.md  RELEASE.md
tools/lincoln-record/: Cargo.toml
tools/lincoln-record/src/: cli.rs  config.rs  lib.rs  main.rs
tools/lincoln-record/src/audio/: devices.rs  resampler.rs  saver.rs  source.rs
tools/lincoln-record/src/audio/capture/: microphone.rs
tools/lincoln-record/src/model/: mod.rs
tools/lincoln-record/src/transcription/: mod.rs
tools/lincoln-record/tests/: cli_args.rs  config_test.rs  devices_test.rs  integration_tests.rs
tools/record-interview/: pyproject.toml
tools/record-interview/record_interview/: __init__.py  checks.py  cli.py  config.py  diarizer.py  errors.py  knowledge_loader.py  metadata.py  phased_summary.py  pipeline.py  process.py  recorder.py  summarizer.py  transcriber.py  validator.py  volume.py  worktree.py
tools/record-interview/record_interview/tui/: app.py  styles.css
tools/record-interview/record_interview/tui/screens/: recording.py  setup.py  summary.py
tools/record-interview/record_interview/tui/widgets/: audio_meter.py
tools/record-interview/tests/: test_audio_meter.py  test_checks.py  test_chunked_recorder.py  test_cli.py  test_cli_entry.py  test_cli_tui.py  test_concatenate_chunks.py  test_config.py  test_diarizer.py  test_errors.py  test_knowledge_loader.py  test_metadata.py  test_phased_summary.py  test_pipeline.py  test_recorder.py  test_summarizer.py  test_summary_screen.py  test_transcriber.py  test_tui.py  test_validator.py  test_volume.py  test_worktree.py
(+270 files in other folders)
