[package]
name = "lincoln-record"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
cpal = "0.18.1"
dirs = "6.0.0"
env_logger = "0.11.11"
log = "0.4.33"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
