[project]
name = "lincoln-record-interview"
version = "0.1.0"
description = "CLI wrapper to record Lincoln interviews and trigger process-interview"
requires-python = ">=3.11"
dependencies = ["textual>=0.70", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "freezegun>=1.5", "pytest-mock>=3.14", "pytest-cov>=5.0", "textual-dev>=1.0"]
local = ["faster-whisper>=1.0", "pyannote.audio>=3.3"]
api = ["openai>=1.0", "anthropic>=0.30"]

[project.scripts]
record-interview = "record_interview.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=record_interview --cov-report=term-missing --cov-fail-under=80"
